[tool.poetry]
name = "distributed_rl"
version = "0.1.0"
description = ""
authors = ["nekanat <nekanat.stock@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
redis = "^3.5.3"
Pillow = "^8.3.1"
gym = "^0.19.0"
atari-py = "^0.3.0"
visdom = "^0.1.8"
numpy = "^1.21.2"
Fabric3 = "^1.14.post1"
lz4 = "^3.1.3"
PyYAML = "^5.4.1"
torch = "^1.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
